--- a/k8s-tp-educacionit/production_issuer.yaml
+++ b/k8s-tp-educacionit/production_issuer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     # Email address used for ACME registration
-    email: diegoc@itcsoluciones.com
+    email: temp@diegocastro.ar
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Name of a secret used to store the ACME account private key
